tests/rosetta/out/C/accumulator-factory.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:58:40Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:58:40Z
#include <stdio.h>
#include <stdlib.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static list_int add_store;
int add(int nv) {
  store.data[0] = add_store.data[0] + nv;
  return add_store.data[0];
}

int (*accumulator(int sum))(int) {
  list_int store = list_int_create(1);
  store.data[0] = sum;
  return add;
}

int mochi_main() {
  int (*x)(int) = accumulator(1);
  x(5);
  accumulator(3);
  char *tmp1 = _str(x(2.3));
  printf("%s\n", tmp1);
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
